# aep

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONFORMANCE.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  README_zh.md  RELEASES.md  RELEASE_CHECKLIST.md  TRADEMARKS.md  package-lock.json  package.json
implementations/python/: .gitignore  pyproject.toml
implementations/python/src/aep/: __init__.py  envelope.py  event_types.py  harness.py  legacy_dimension_types.py  mcp_bridge.py  postgres_delivery_store.py  router.py  session.py  subscription.py  task.py
implementations/python/src/axisrobo_harmovela_adaptation/: __init__.py
implementations/python/src/axisrobo_harmovela_agent/: __init__.py
implementations/python/src/harmovela_cli/: main.py
implementations/python/tests/: test_adaptation_module.py  test_agent_module.py  test_capability_types.py  test_cli.py  test_cli_daemon_e2e.py  test_cli_subscriptions.py  test_command_module.py  test_context_module.py  test_delegation_module.py  test_delivery.py  test_envelope.py  test_environment_module.py  test_errors.py  test_event_core_module.py  test_fixtures.py  test_governance.py  test_governance_module.py  test_harness.py  test_kafka_transport.py  test_mcp_bridge.py  test_nats_transport.py  test_query_module.py  test_redis_transport.py  test_router.py  test_runtime_api.py  test_runtime_config.py  test_runtime_daemon.py  test_runtime_service.py  test_runtime_subscriptions.py  test_runtime_subscriptions_api.py  test_runtime_subscriptions_sse.py  test_schema.py  test_session.py  test_sqlite_delivery_store.py  test_subscription.py  test_task.py  test_task_module.py  test_tool_module.py  test_transport_grpc.py  test_transport_sse.py  (+2 more)
reference/python/: README.md  pyproject.toml
reference/python/tests/: test_cli.py  test_cli_daemon_e2e.py  test_cli_subscriptions.py  test_delivery_journal.py  test_delivery_store.py  test_errors.py  test_fixtures.py  test_mcp_bridge.py  test_nats_transport.py  test_postgres_delivery_store.py  test_router.py  test_runtime_config.py  test_runtime_daemon.py  test_runtime_subscriptions.py  test_runtime_subscriptions_sse.py  test_sqlite_delivery_store.py  test_subscription.py  test_transport_sse.py  test_transport_ws.py
(+838 files in other folders)
