[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harmovela-reference-python"
version = "0.1.0.dev0"
description = "Harmovela Protocol Python reference implementation."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "jsonschema>=4",
    "websockets>=14",
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "click>=8",
]

[project.scripts]
harmovela = "harmovela_cli.main:cli"
harmovelad = "harmovela_runtime.server:main"

[project.optional-dependencies]
test = [
    "pytest>=8",
]
nats = [
    "nats-py>=0.8",
]
kafka = [
    "confluent-kafka>=2",
]
redis = [
    "redis>=5",
]
postgres = [
    "psycopg>=3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
