[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aep-reference-python"
version = "0.1.0.dev0"
description = "Draft Agent Event Protocol Python reference implementation."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "jsonschema>=4",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
